@@ -1,5 +1,5 @@
 equalizer-test
 metadata_editor
 output-selector-test
+test-oss4
 pitch-test
-
